feat: setup modular structure and persistence layer