@@ -3,22 +3,20 @@ package com.example.app.controller;
 import com.example.dto.LegalCaseSearchCriteria;
 import com.example.model.LegalCase;
 import com.example.model.Status;
-import com.example.model.User;
 import com.example.service.LegalCaseService;
 import com.example.service.UserService;
 import com.example.service.specification.LegalCaseSpecification;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Controller
@@ -50,7 +48,7 @@ import java.util.stream.IntStream;
             if (totalPages > 0) {
                 List<Integer> pageNumbers = IntStream.rangeClosed(1, totalPages)
                         .boxed()
-                        .toList();
+                        .collect(Collectors.toList());
                 modelMap.addAttribute("pageNumbers", pageNumbers);
             }
 
@@ -81,7 +79,7 @@ import java.util.stream.IntStream;
         modelMap.addAttribute("statuses", Status.values());
         return "addLegalCases";
     }
-//       test branch test change
+
 
     @GetMapping("/legalCases/delete")
     public String delete(@RequestParam("id") long id) {
